--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,12 @@
 body {
   margin: 0;
   font-family: 'Roboto';
+  background-color: #ccc;
 }
 
 .app_container {
   display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
 }
